--- a/index.html
+++ b/index.html
@@ -185,10 +185,14 @@
 																			
 																			<p style="margin:6pt 0cm">
 																				<span style="font-size:14px;font-family:Verdana,Geneva,sans-serif;color:#696969"> 
-																						Come and enjoy after work drinks, try our 
-																					<span style="color:#f78e1e">
-																						<a href="http://busaba.fbmta.com/a/0/31112370/1434698/default.aspx" target="_blank">
-																							<span style="color:#f78e1e">Bangkok inspired cocktails<span style="color:#f78e1e"></span></span></a></span> and share some laughs before the weekend begins!</span></p></font></td>
+																								Come and enjoy after work drinks, try our 
+																						<span style="color:#f78e1e">
+																							<a href="http://busaba.fbmta.com/a/0/31112370/1434698/default.aspx" target="_blank">
+																								<span style="color:#f78e1e">Bangkok inspired cocktails
+																									<span style="color:#f78e1e"></span>
+																								</span>
+																							</a>
+																						</span> and share some laughs before the weekend begins!</span></p></font></td>
 																</tr></tbody></table>
 
 					</td>
