update almost finish?

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 																	<font face="Verdana, Geneva, sans-serif">
 																		<div>
 																			<span style="font-size:14px;font-family:Verdana,Geneva,sans-serif;
-																					color:#696969">Hello fitzgerald,
+																					color:#696969">Hello Customer's name HERE,
 																			</span>
 																		</div>
 																			<p style="margin:6pt 0cm">
