--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<tbody>
 			<tr>
 				<td>
-					<table class="responsive-table" align="center" width="600" border="0" cellpadding="0" cellspacing="0" 
+					<table class="responsive-table-desktop" align="center" width="600" border="0" cellpadding="0" cellspacing="0" 
 							style="max-width:600px!important;width:600px" bgcolor="#ffffff">
 						<tbody>
 							<tr>
